--- a/drawee-the-app/apps/http/package.json
+++ b/drawee-the-app/apps/http/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc -b",
-    "dev": "npm run build && npm run start",
+    "dev": "pnpm run build && pnpm run start",
     "start": "node ./dist/index.js"
   },
   "keywords": [],
